// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LeadBlockSection tests When user navigates with selected systems query string should render back to your selection button 1`] = `
<div>
  <div
    class="LeadBlockSection Section-root Section-white css-cxq310"
    data-testid="system-details-lead-block-section"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <div
          class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-oet5y7-MuiGrid2-root"
          data-testid="grid-container"
        >
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-lg-8 MuiGrid2-grid-xs-12 css-wuqcfn-MuiGrid2-root"
            data-testid="grid-item"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
              data-testid="typography"
            >
              <svg
                class="brandLogo"
                data-testid="lead-block-brand-logo"
                viewBox="0 0 154 100"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M154 26h-7.66v37.67H154V26ZM7.66 35.262H0V63.67h7.66V35.262ZM7.66 26H0v7.213h7.66V26ZM59.765 56.545c-3.919 0-7.214-3.294-7.214-7.213 0-3.918 3.295-7.213 7.214-7.213 3.92 0 7.215 3.295 7.215 7.213 0 4.097-3.296 7.213-7.215 7.213Zm0-21.907A14.748 14.748 0 0 0 44.98 49.421a14.748 14.748 0 0 0 14.785 14.783c8.195 0 14.786-6.59 14.786-14.783a14.748 14.748 0 0 0-14.786-14.783ZM33.668 50.579c-.623 3.918-4.364 6.59-8.283 5.877-3.92-.623-6.591-4.363-5.879-8.282.713-3.918 4.364-6.59 8.284-5.877 2.939.534 5.344 2.76 5.878 5.788h7.66c-.89-8.104-8.105-14.07-16.21-13.358-8.106.802-14.073 8.015-13.36 16.03.8 8.104 8.015 14.07 16.032 13.358 7.125-.623 12.825-6.323 13.36-13.536h-7.482ZM141.709 49.332c0-8.193-6.681-14.783-14.786-14.783-8.194 0-14.785 6.68-14.785 14.783 0 8.104 6.68 14.783 14.785 14.783 1.871 0 3.741-.445 5.433-1.069v-8.994c-2.583 2.939-7.125 3.384-10.064.801-2.94-2.582-3.385-7.124-.802-10.063 2.583-2.938 7.125-3.384 10.065-.801 1.603 1.425 2.494 3.384 2.494 5.432v14.07h7.57V49.333h.09ZM93.166 34.638c-8.105 0-14.785 6.59-14.785 14.783V74h7.57V49.332c0-4.007 3.207-7.302 7.215-7.302s7.304 3.206 7.304 7.213c0 4.008-3.207 7.302-7.215 7.302-2.227 0-4.275-.89-5.611-2.493v8.994c1.781.802 3.563 1.069 5.433 1.069 8.194 0 14.785-6.679 14.785-14.783 0-8.193-6.502-14.694-14.696-14.694Z"
                  fill="#009FE3"
                />
              </svg>
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
              data-testid="typography"
            >
              <h1
                class="MuiTypography-root MuiTypography-h1 Typography-underline css-1stz9tq-MuiTypography-root"
                data-testid="system-lead-block-title"
              >
                lead Block section
              </h1>
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 ctaContainer css-131kag5-MuiTypography-root"
              data-testid="typography"
            >
              <a
                class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeLarge MuiButton-textSizeLarge MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeLarge MuiButton-textSizeLarge backToYourSelectionBtn css-1ioi680-MuiButtonBase-root-MuiButton-root"
                data-gtm="{"id":"cta-click1","label":"MC: sdp.leadBlock.backToYourSelection","action":"system-configurator-page?referer=sys_details"}"
                data-testid="system-lead-block-prev-page"
                href="system-configurator-page?referer=sys_details"
                rel="noopener noreferrer"
                tabindex="0"
              >
                <span
                  class="MuiButton-startIcon Button-startIcon MuiButton-iconSizeLarge css-htszrh-MuiButton-startIcon"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="ArrowBackIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                    />
                  </svg>
                </span>
                MC: sdp.leadBlock.backToYourSelection
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </a>
              <button
                class="MuiButtonBase-root MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium quotationBtn css-11nrv4h-MuiButtonBase-root-MuiButton-root"
                data-gtm="{"id":"cta-click1","label":"cta label","action":"https://www.external.co.uk"}"
                data-testid="system-lead-block-cta-action"
                tabindex="0"
                type="button"
              >
                cta label
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium css-9tj150-MuiButton-endIcon"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="ArrowForwardIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LeadBlockSection tests should not render systemAttributes Card with empty uniqueSellingPropositions 1`] = `
<div>
  <div
    class="LeadBlockSection Section-root Section-white css-cxq310"
    data-testid="system-details-lead-block-section"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <div
          class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-oet5y7-MuiGrid2-root"
          data-testid="grid-container"
        >
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-lg-8 MuiGrid2-grid-xs-12 css-wuqcfn-MuiGrid2-root"
            data-testid="grid-item"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
              data-testid="typography"
            >
              <svg
                class="brandLogo"
                data-testid="lead-block-brand-logo"
                viewBox="0 0 154 100"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M154 26h-7.66v37.67H154V26ZM7.66 35.262H0V63.67h7.66V35.262ZM7.66 26H0v7.213h7.66V26ZM59.765 56.545c-3.919 0-7.214-3.294-7.214-7.213 0-3.918 3.295-7.213 7.214-7.213 3.92 0 7.215 3.295 7.215 7.213 0 4.097-3.296 7.213-7.215 7.213Zm0-21.907A14.748 14.748 0 0 0 44.98 49.421a14.748 14.748 0 0 0 14.785 14.783c8.195 0 14.786-6.59 14.786-14.783a14.748 14.748 0 0 0-14.786-14.783ZM33.668 50.579c-.623 3.918-4.364 6.59-8.283 5.877-3.92-.623-6.591-4.363-5.879-8.282.713-3.918 4.364-6.59 8.284-5.877 2.939.534 5.344 2.76 5.878 5.788h7.66c-.89-8.104-8.105-14.07-16.21-13.358-8.106.802-14.073 8.015-13.36 16.03.8 8.104 8.015 14.07 16.032 13.358 7.125-.623 12.825-6.323 13.36-13.536h-7.482ZM141.709 49.332c0-8.193-6.681-14.783-14.786-14.783-8.194 0-14.785 6.68-14.785 14.783 0 8.104 6.68 14.783 14.785 14.783 1.871 0 3.741-.445 5.433-1.069v-8.994c-2.583 2.939-7.125 3.384-10.064.801-2.94-2.582-3.385-7.124-.802-10.063 2.583-2.938 7.125-3.384 10.065-.801 1.603 1.425 2.494 3.384 2.494 5.432v14.07h7.57V49.333h.09ZM93.166 34.638c-8.105 0-14.785 6.59-14.785 14.783V74h7.57V49.332c0-4.007 3.207-7.302 7.215-7.302s7.304 3.206 7.304 7.213c0 4.008-3.207 7.302-7.215 7.302-2.227 0-4.275-.89-5.611-2.493v8.994c1.781.802 3.563 1.069 5.433 1.069 8.194 0 14.785-6.679 14.785-14.783 0-8.193-6.502-14.694-14.696-14.694Z"
                  fill="#009FE3"
                />
              </svg>
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
              data-testid="typography"
            >
              <h1
                class="MuiTypography-root MuiTypography-h1 Typography-underline css-1stz9tq-MuiTypography-root"
                data-testid="system-lead-block-title"
              >
                lead Block section
              </h1>
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 ctaContainer css-131kag5-MuiTypography-root"
              data-testid="typography"
            >
              <button
                class="MuiButtonBase-root MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium quotationBtn css-11nrv4h-MuiButtonBase-root-MuiButton-root"
                data-gtm="{"id":"cta-click1","label":"cta label","action":"https://www.external.co.uk"}"
                data-testid="system-lead-block-cta-action"
                tabindex="0"
                type="button"
              >
                cta label
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium css-9tj150-MuiButton-endIcon"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="ArrowForwardIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LeadBlockSection tests should render 1`] = `
<div>
  <div
    class="LeadBlockSection Section-root Section-white css-cxq310"
    data-testid="system-details-lead-block-section"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <div
          class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-oet5y7-MuiGrid2-root"
          data-testid="grid-container"
        >
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-lg-8 MuiGrid2-grid-xs-12 css-wuqcfn-MuiGrid2-root"
            data-testid="grid-item"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
              data-testid="typography"
            >
              <svg
                class="brandLogo"
                data-testid="lead-block-brand-logo"
                viewBox="0 0 154 100"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M154 26h-7.66v37.67H154V26ZM7.66 35.262H0V63.67h7.66V35.262ZM7.66 26H0v7.213h7.66V26ZM59.765 56.545c-3.919 0-7.214-3.294-7.214-7.213 0-3.918 3.295-7.213 7.214-7.213 3.92 0 7.215 3.295 7.215 7.213 0 4.097-3.296 7.213-7.215 7.213Zm0-21.907A14.748 14.748 0 0 0 44.98 49.421a14.748 14.748 0 0 0 14.785 14.783c8.195 0 14.786-6.59 14.786-14.783a14.748 14.748 0 0 0-14.786-14.783ZM33.668 50.579c-.623 3.918-4.364 6.59-8.283 5.877-3.92-.623-6.591-4.363-5.879-8.282.713-3.918 4.364-6.59 8.284-5.877 2.939.534 5.344 2.76 5.878 5.788h7.66c-.89-8.104-8.105-14.07-16.21-13.358-8.106.802-14.073 8.015-13.36 16.03.8 8.104 8.015 14.07 16.032 13.358 7.125-.623 12.825-6.323 13.36-13.536h-7.482ZM141.709 49.332c0-8.193-6.681-14.783-14.786-14.783-8.194 0-14.785 6.68-14.785 14.783 0 8.104 6.68 14.783 14.785 14.783 1.871 0 3.741-.445 5.433-1.069v-8.994c-2.583 2.939-7.125 3.384-10.064.801-2.94-2.582-3.385-7.124-.802-10.063 2.583-2.938 7.125-3.384 10.065-.801 1.603 1.425 2.494 3.384 2.494 5.432v14.07h7.57V49.333h.09ZM93.166 34.638c-8.105 0-14.785 6.59-14.785 14.783V74h7.57V49.332c0-4.007 3.207-7.302 7.215-7.302s7.304 3.206 7.304 7.213c0 4.008-3.207 7.302-7.215 7.302-2.227 0-4.275-.89-5.611-2.493v8.994c1.781.802 3.563 1.069 5.433 1.069 8.194 0 14.785-6.679 14.785-14.783 0-8.193-6.502-14.694-14.696-14.694Z"
                  fill="#009FE3"
                />
              </svg>
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
              data-testid="typography"
            >
              <h1
                class="MuiTypography-root MuiTypography-h1 Typography-underline css-1stz9tq-MuiTypography-root"
                data-testid="system-lead-block-title"
              >
                lead Block section
              </h1>
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 ctaContainer css-131kag5-MuiTypography-root"
              data-testid="typography"
            >
              <button
                class="MuiButtonBase-root MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium quotationBtn css-11nrv4h-MuiButtonBase-root-MuiButton-root"
                data-gtm="{"id":"cta-click1","label":"cta label","action":"https://www.external.co.uk"}"
                data-testid="system-lead-block-cta-action"
                tabindex="0"
                type="button"
              >
                cta label
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium css-9tj150-MuiButton-endIcon"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="ArrowForwardIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LeadBlockSection tests should render with uniqueSellingPropositions 1`] = `
<div>
  <div
    class="LeadBlockSection Section-root Section-white css-cxq310"
    data-testid="system-details-lead-block-section"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <div
          class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3 css-oet5y7-MuiGrid2-root"
          data-testid="grid-container"
        >
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-lg-8 MuiGrid2-grid-xs-12 css-wuqcfn-MuiGrid2-root"
            data-testid="grid-item"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
              data-testid="typography"
            >
              <svg
                class="brandLogo"
                data-testid="lead-block-brand-logo"
                viewBox="0 0 154 100"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M154 26h-7.66v37.67H154V26ZM7.66 35.262H0V63.67h7.66V35.262ZM7.66 26H0v7.213h7.66V26ZM59.765 56.545c-3.919 0-7.214-3.294-7.214-7.213 0-3.918 3.295-7.213 7.214-7.213 3.92 0 7.215 3.295 7.215 7.213 0 4.097-3.296 7.213-7.215 7.213Zm0-21.907A14.748 14.748 0 0 0 44.98 49.421a14.748 14.748 0 0 0 14.785 14.783c8.195 0 14.786-6.59 14.786-14.783a14.748 14.748 0 0 0-14.786-14.783ZM33.668 50.579c-.623 3.918-4.364 6.59-8.283 5.877-3.92-.623-6.591-4.363-5.879-8.282.713-3.918 4.364-6.59 8.284-5.877 2.939.534 5.344 2.76 5.878 5.788h7.66c-.89-8.104-8.105-14.07-16.21-13.358-8.106.802-14.073 8.015-13.36 16.03.8 8.104 8.015 14.07 16.032 13.358 7.125-.623 12.825-6.323 13.36-13.536h-7.482ZM141.709 49.332c0-8.193-6.681-14.783-14.786-14.783-8.194 0-14.785 6.68-14.785 14.783 0 8.104 6.68 14.783 14.785 14.783 1.871 0 3.741-.445 5.433-1.069v-8.994c-2.583 2.939-7.125 3.384-10.064.801-2.94-2.582-3.385-7.124-.802-10.063 2.583-2.938 7.125-3.384 10.065-.801 1.603 1.425 2.494 3.384 2.494 5.432v14.07h7.57V49.333h.09ZM93.166 34.638c-8.105 0-14.785 6.59-14.785 14.783V74h7.57V49.332c0-4.007 3.207-7.302 7.215-7.302s7.304 3.206 7.304 7.213c0 4.008-3.207 7.302-7.215 7.302-2.227 0-4.275-.89-5.611-2.493v8.994c1.781.802 3.563 1.069 5.433 1.069 8.194 0 14.785-6.679 14.785-14.783 0-8.193-6.502-14.694-14.696-14.694Z"
                  fill="#009FE3"
                />
              </svg>
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
              data-testid="typography"
            >
              <h1
                class="MuiTypography-root MuiTypography-h1 Typography-underline css-1stz9tq-MuiTypography-root"
                data-testid="system-lead-block-title"
              >
                lead Block section
              </h1>
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 ctaContainer css-131kag5-MuiTypography-root"
              data-testid="typography"
            >
              <button
                class="MuiButtonBase-root MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium quotationBtn css-11nrv4h-MuiButtonBase-root-MuiButton-root"
                data-gtm="{"id":"cta-click1","label":"cta label","action":"https://www.external.co.uk"}"
                data-testid="system-lead-block-cta-action"
                tabindex="0"
                type="button"
              >
                cta label
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium css-9tj150-MuiButton-endIcon"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="ArrowForwardIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
            </p>
          </div>
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-lg-4 MuiGrid2-grid-xs-12 card css-1fx28h6-MuiGrid2-root"
            data-testid="system-attributes-card"
          >
            <div
              class="ColorPair-pearl css-1pt14k0"
            >
              <div
                class="css-qtgtj9"
              >
                <div
                  class="css-wepxue"
                >
                  <div
                    class="iconList"
                  >
                    <ul
                      class="css-1err4t"
                    >
                      <li
                        class="IconList-isCompact css-nggtm6"
                      >
                        <div
                          class="IconList-icon"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1bt3ayq-MuiSvgIcon-root"
                            data-testid="CheckIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                            />
                          </svg>
                        </div>
                        <div
                          class="css-1lg3fd1"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1  css-87ejlm-MuiTypography-root"
                            data-testid="typography"
                          >
                            feature 1
                          </p>
                        </div>
                      </li>
                      <li
                        class="IconList-isCompact css-nggtm6"
                      >
                        <div
                          class="IconList-icon"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1bt3ayq-MuiSvgIcon-root"
                            data-testid="CheckIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                            />
                          </svg>
                        </div>
                        <div
                          class="css-1lg3fd1"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1  css-87ejlm-MuiTypography-root"
                            data-testid="typography"
                          >
                            feature 2
                          </p>
                        </div>
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
